--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,17 +9,18 @@
             android:icon="@drawable/ic_food"
             android:title="Categories" />
         <item
-            android:id="@+id/nav_cart"
-            android:icon="@drawable/ic_baseline_shopping_cart_24"
-            android:title="Cart" />
+            android:id="@+id/nav_orders_pending"
+            android:icon="@drawable/ic_baseline_access_time_24"
+            android:title="Orders Pending" />
+        <item
+            android:id="@+id/nav_orders_completed"
+            android:icon="@drawable/ic_baseline_orders"
+            android:title="Completed Orders" />
         <item
             android:id="@+id/nav_coupons"
             android:icon="@drawable/ic_baseline_card_giftcard_24"
             android:title="Coupons" />
-        <item
-            android:id="@+id/nav_orders"
-            android:icon="@drawable/ic_baseline_orders"
-            android:title="Orders" />
+
         <item
             android:id="@+id/nav_sign_out"
             android:icon="@drawable/ic_log_out"
